# leetcode

./: .gitignore  .pre-commit-config.yaml  generate_task.py  generate_task.sh  pyproject.toml
generator/: basics.py  golang.py  python.py  scraper.py  try.txt  utils.py
go/: best_time_to_buy_and_sell_stocks.go  best_time_to_buy_and_sell_stocks_test.go  climb_stairs.go  climb_stairs_test.go  go.mod  implement_str_str.go  implement_str_str_test.go  inorder_traversal.go  inorder_traversal_test.go  is_happy.go  is_happy_test.go  ko.go  length_of_last_word.go  length_of_last_word_test.go  linked_list_cycle.go  linked_list_cycle_test.go  linked_list_length.go  linked_list_length_test.go  majority_element.go  majority_element_test.go  max_depth_bst.go  max_depth_bst_test.go  min_stack.go  (+32 more)
python/: .flake8  .pre-commit-config.yaml  azure-pipelines.yml  pyproject.toml
python/algos/: best_time_to_buy_and_sell_stocks.py  climb_stairs.py  convert_sorted_array_to_bst.py  implement_str_str.py  inorder_traversal.py  intersection_of_two_linked_lists.py  is_balanced.py  is_happy.py  length_of_last_word.py  linked_list_cycle.py  linked_list_length.py  majority_element.py  max_depth_bst.py  maximum_subarray.py  merge_sorted_arrays.py  merge_two_sorted_lists.py  min_stack.py  minimum_depth_of_bst.py  palindrom_number.py  path_sum.py  remove_duplicates_from_sorted_array.py  remove_duplicates_from_sorted_list.py  remove_element.py  roman_to_integer.py  same_trees.py  single_number.py  sorted_array_to_bst.py  sqrt_x.py  symmetric_tree.py  two_sum.py  valid_palindrome.py  valid_parentheses.py
(+62 files in other folders)
