[tool.poetry]
name = "algos"
version = "0.1.0"
description = ""
authors = ["Piotr Grzybowski <p.grzybowski2@bp.com>"]

[tool.poetry.dependencies]
python = ">=3.10,"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
poethepoet = "^0.13.1"
pre-commit = "^2.15.0"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"


[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120

[tool.mypy]
python_version = 3.10
plugins = ["pydantic.mypy"]

[tool.isort]
line_length = 120
lines_between_types = 1
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pydocstyle]
convention = "google"
add-ignore = ["D100", "D104", "D105"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
